# rideways

./: Cargo.toml
ecs_components/: Cargo.toml
ecs_components/src/: draw.rs  harms_player.rs  is_explosion.rs  is_player.rs  keep_inside.rs  lib.rs  lifetime.rs  position.rs  spawner_kind.rs  sprite.rs  world_queries.rs
ecs_setup/: Cargo.toml
ecs_setup/src/: lib.rs
ecs_systems/: Cargo.toml
ecs_systems/src/: alien_shooting_system.rs  collision_checker_system.rs  enemy_spawning_system.rs  force_inside_system.rs  invincibility_watching_system.rs  lib.rs  lifetime_watching_system.rs  non_player_control_system.rs  player_control_system.rs  player_shooting_system.rs  reap_outsiders_system.rs  spawner_spawning_system.rs  star_spawner_system.rs  update_pos_system.rs
geometry/: Cargo.toml
geometry/src/: lib.rs  rect.rs  rectsize.rs
main/: Cargo.toml
main/src/: main.rs
sdl_graphics/: Cargo.toml
sdl_graphics/src/: lib.rs
sdl_input/: Cargo.toml
sdl_input/src/: lib.rs
shared_types/: Cargo.toml
shared_types/src/: lib.rs
src/: control_state.rs  ecs.rs  entity_sizes.rs  game_state.rs  graphics.rs  main.rs  rect.rs
src/ecs/: collision_checker_system.rs  force_inside_system.rs  mod.rs  movement_kind.rs  non_player_control_system.rs  player_control_system.rs  player_shooting_system.rs  position.rs  reap_outsiders_system.rs  reap_when_outside.rs  render_all_system.rs  render_kind.rs  setup.rs  spawning_system.rs  update_pos_system.rs  velocity.rs  world_queries.rs
src/ecs/components/: harms_aliens.rs  is_alien.rs  (+3 more)
src/geometry/: mod.rs  position.rs  rect.rs
(+14 files in other folders)
