[package]
name = "main"
version = "0.1.0"
authors = ["Peter Allin <peter@peca.dk>"]
edition = "2018"


[dependencies]
ecs_setup = { path = "../ecs_setup" }
ecs_components = { path = "../ecs_components" }
sdl_input = { path = "../sdl_input" }
sdl_graphics = { path = "../sdl_graphics" }
shared_types = { path = "../shared_types"}
geometry = { path = "../geometry" }
sdl2 = { version = "0.32", features = ["ttf","image","gfx","mixer"] }
specs = "0.15"
time = "0.1"
